Compilador.API/Antlr4/TokenParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.10.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Token.g4 by ANTLR 4.10.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.10.1")]
[System.CLSCompliant(false)]
public partial class TokenParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		WHITESPACE=1, EPSILON=2, OPEN_PARENTHESIS=3, CLOSE_PARENTHESIS=4, OPEN_BRACKET=5, 
		CLOSE_BRACKET=6, OPEN_CURLYBRACKET=7, CLOSE_CURLYBRACKET=8, COMMA=9, SEMICOLON=10, 
		PLUS=11, MINUS=12, TIMES=13, DIV=14, MOD=15, NOT=16, ATTRIBUTION=17, LOWER=18, 
		LOWER_EQUAL=19, BIGGER=20, BIGGER_EQUAL=21, DIFFERENT=22, EQUALS=23, OR=24, 
		AND=25, FUNC=26, COMP=27, NEWLINE=28, COMMENT=29, TEXT=30, IF=31, INT=32, 
		FOR=33, CHAR=34, ELSE=35, MAIN=36, VOID=37, FLOAT=38, SCANF=39, WHILE=40, 
		BOOLEAN=41, PRINTLN=42, RETURN=43, BOOL=44, LETTER=45, INTEGER=46, DECIMAL=47, 
		ID=48;
	public const int
		RULE_programa = 0, RULE_funcoes = 1, RULE_dec_funcao = 2, RULE_tipo_retorno = 3, 
		RULE_tipo = 4, RULE_tipo_base = 5, RULE_dimensao = 6, RULE_parametros = 7, 
		RULE_novo_parametro = 8, RULE_principal = 9, RULE_bloco = 10, RULE_dec_variaveis = 11, 
		RULE_novo_id = 12, RULE_comandos = 13, RULE_comando = 14, RULE_leitura = 15, 
		RULE_escrita = 16, RULE_termo = 17, RULE_novo_termo = 18, RULE_selecao = 19, 
		RULE_senao = 20, RULE_enquanto = 21, RULE_atribuicao = 22, RULE_complemento = 23, 
		RULE_funcao = 24, RULE_argumentos = 25, RULE_novo_argumento = 26, RULE_retorno = 27, 
		RULE_expressao = 28, RULE_expr_ou = 29, RULE_expr_ou2 = 30, RULE_expr_e = 31, 
		RULE_expr_e2 = 32, RULE_expr_relacional = 33, RULE_expr_relacional2 = 34, 
		RULE_expr_aditiva = 35, RULE_expr_aditiva2 = 36, RULE_op_aditivo = 37, 
		RULE_expr_multiplicativa = 38, RULE_expr_multiplicativa2 = 39, RULE_op_multiplicativo = 40, 
		RULE_fator = 41, RULE_vetor = 42, RULE_constante = 43, RULE_sinal = 44;
	public static readonly string[] ruleNames = {
		"programa", "funcoes", "dec_funcao", "tipo_retorno", "tipo", "tipo_base", 
		"dimensao", "parametros", "novo_parametro", "principal", "bloco", "dec_variaveis", 
		"novo_id", "comandos", "comando", "leitura", "escrita", "termo", "novo_termo", 
		"selecao", "senao", "enquanto", "atribuicao", "complemento", "funcao", 
		"argumentos", "novo_argumento", "retorno", "expressao", "expr_ou", "expr_ou2", 
		"expr_e", "expr_e2", "expr_relacional", "expr_relacional2", "expr_aditiva", 
		"expr_aditiva2", "op_aditivo", "expr_multiplicativa", "expr_multiplicativa2", 
		"op_multiplicativo", "fator", "vetor", "constante", "sinal"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, "'('", "')'", "'['", "']'", "'{'", "'}'", "','", "';'", 
		"'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'='", "'<'", "'<='", "'>'", 
		"'>='", "'!='", "'=='", "'||'", "'&&'", "'func'", null, null, null, null, 
		"'if'", "'int'", "'for'", "'char'", "'else'", "'main'", "'void'", "'float'", 
		"'scanf'", "'while'", "'boolean'", "'println'", "'return'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "WHITESPACE", "EPSILON", "OPEN_PARENTHESIS", "CLOSE_PARENTHESIS", 
		"OPEN_BRACKET", "CLOSE_BRACKET", "OPEN_CURLYBRACKET", "CLOSE_CURLYBRACKET", 
		"COMMA", "SEMICOLON", "PLUS", "MINUS", "TIMES", "DIV", "MOD", "NOT", "ATTRIBUTION", 
		"LOWER", "LOWER_EQUAL", "BIGGER", "BIGGER_EQUAL", "DIFFERENT", "EQUALS", 
		"OR", "AND", "FUNC", "COMP", "NEWLINE", "COMMENT", "TEXT", "IF", "INT", 
		"FOR", "CHAR", "ELSE", "MAIN", "VOID", "FLOAT", "SCANF", "WHILE", "BOOLEAN", 
		"PRINTLN", "RETURN", "BOOL", "LETTER", "INTEGER", "DECIMAL", "ID"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Token.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static TokenParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public TokenParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public TokenParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramaContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FuncoesContext funcoes() {
			return GetRuleContext<FuncoesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PrincipalContext principal() {
			return GetRuleContext<PrincipalContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(TokenParser.Eof, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_programa; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITokenListener typedListener = listener as ITokenListener;
			if (typedListener != null) typedListener.EnterPrograma(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITokenListener typedListener = listener as ITokenListener;
			if (typedListener != null) typedListener.ExitPrograma(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITokenVisitor<TResult> typedVisitor = visitor as ITokenVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrograma(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramaContext programa() {
		ProgramaContext _localctx = new ProgramaContext(Context, State);
		EnterRule(_localctx, 0, RULE_programa);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 90;
			funcoes();
			State = 91;
			principal();
			State = 92;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncoesContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Dec_funcaoContext dec_funcao() {
			return GetRuleContext<Dec_funcaoContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncoesContext funcoes() {
			return GetRuleContext<FuncoesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EPSILON() { return GetToken(TokenParser.EPSILON, 0); }
		public FuncoesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcoes; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITokenListener typedListener = listener as ITokenListener;
			if (typedListener != null) typedListener.EnterFuncoes(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITokenListener typedListener = listener as ITokenListener;
			if (typedListener != null) typedListener.ExitFuncoes(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITokenVisitor<TResult> typedVisitor = visitor as ITokenVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFuncoes(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FuncoesContext funcoes() {
		FuncoesContext _localctx = new FuncoesContext(Context, State);
		EnterRule(_localctx, 2, RULE_funcoes);
		try {
			State = 98;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case INT:
			case CHAR:
			case VOID:
			case FLOAT:
			case BOOLEAN:
				EnterOuterAlt(_localctx, 1);
				{
				State = 94;
				dec_funcao();
				State = 95;
				funcoes();
				}
				break;
			case EPSILON:
				EnterOuterAlt(_localctx, 2);
				{
				State = 97;
				Match(EPSILON);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Dec_funcaoContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Tipo_retornoContext tipo_retorno() {
			return GetRuleContext<Tipo_retornoContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(TokenParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPEN_PARENTHESIS() { return GetToken(TokenParser.OPEN_PARENTHESIS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ParametrosContext parametros() {
			return GetRuleContext<ParametrosContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CLOSE_PARENTHESIS() { return GetToken(TokenParser.CLOSE_PARENTHESIS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BlocoContext bloco() {
			return GetRuleContext<BlocoContext>(0);
		}
		public Dec_funcaoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dec_funcao; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITokenListener typedListener = listener as ITokenListener;
			if (typedListener != null) typedListener.EnterDec_funcao(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITokenListener typedListener = listener as ITokenListener;
			if (typedListener != null) typedListener.ExitDec_funcao(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITokenVisitor<TResult> typedVisitor = visitor as ITokenVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDec_funcao(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Dec_funcaoContext dec_funcao() {
		Dec_funcaoContext _localctx = new Dec_funcaoContext(Context, State);
		EnterRule(_localctx, 4, RULE_dec_funcao);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 100;
			tipo_retorno();
			State = 101;
			Match(ID);
			State = 102;
			Match(OPEN_PARENTHESIS);
			State = 103;
			parametros();
			State = 104;
			Match(CLOSE_PARENTHESIS);
			State = 105;
			bloco();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Tipo_retornoContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TipoContext tipo() {
			return GetRuleContext<TipoContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VOID() { return GetToken(TokenParser.VOID, 0); }
		public Tipo_retornoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tipo_retorno; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITokenListener typedListener = listener as ITokenListener;
			if (typedListener != null) typedListener.EnterTipo_retorno(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITokenListener typedListener = listener as ITokenListener;
			if (typedListener != null) typedListener.ExitTipo_retorno(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITokenVisitor<TResult> typedVisitor = visitor as ITokenVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTipo_retorno(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Tipo_retornoContext tipo_retorno() {
		Tipo_retornoContext _localctx = new Tipo_retornoContext(Context, State);
		EnterRule(_localctx, 6, RULE_tipo_retorno);
		try {
			State = 109;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case INT:
			case CHAR:
			case FLOAT:
			case BOOLEAN:
				EnterOuterAlt(_localctx, 1);
				{
				State = 107;
				tipo();
				}
				break;
			case VOID:
				EnterOuterAlt(_localctx, 2);
				{
				State = 108;
				Match(VOID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TipoContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Tipo_baseContext tipo_base() {
			return GetRuleContext<Tipo_baseContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DimensaoContext dimensao() {
			return GetRuleContext<DimensaoContext>(0);
		}
		public TipoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tipo; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITokenListener typedListener = listener as ITokenListener;
			if (typedListener != null) typedListener.EnterTipo(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITokenListener typedListener = listener as ITokenListener;
			if (typedListener != null) typedListener.ExitTipo(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITokenVisitor<TResult> typedVisitor = visitor as ITokenVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTipo(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TipoContext tipo() {
		TipoContext _localctx = new TipoContext(Context, State);
		EnterRule(_localctx, 8, RULE_tipo);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 111;
			tipo_base();
			State = 112;
			dimensao();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Tipo_baseContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CHAR() { return GetToken(TokenParser.CHAR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FLOAT() { return GetToken(TokenParser.FLOAT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(TokenParser.INT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BOOLEAN() { return GetToken(TokenParser.BOOLEAN, 0); }
		public Tipo_baseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tipo_base; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITokenListener typedListener = listener as ITokenListener;
			if (typedListener != null) typedListener.EnterTipo_base(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITokenListener typedListener = listener as ITokenListener;
			if (typedListener != null) typedListener.ExitTipo_base(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITokenVisitor<TResult> typedVisitor = visitor as ITokenVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTipo_base(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Tipo_baseContext tipo_base() {
		Tipo_baseContext _localctx = new Tipo_baseContext(Context, State);
		EnterRule(_localctx, 10, RULE_tipo_base);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 114;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << CHAR) | (1L << FLOAT) | (1L << BOOLEAN))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DimensaoContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPEN_BRACKET() { return GetToken(TokenParser.OPEN_BRACKET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INTEGER() { return GetToken(TokenParser.INTEGER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CLOSE_BRACKET() { return GetToken(TokenParser.CLOSE_BRACKET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DimensaoContext dimensao() {
			return GetRuleContext<DimensaoContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EPSILON() { return GetToken(TokenParser.EPSILON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(TokenParser.Eof, 0); }
		public DimensaoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dimensao; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITokenListener typedListener = listener as ITokenListener;
			if (typedListener != null) typedListener.EnterDimensao(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITokenListener typedListener = listener as ITokenListener;
			if (typedListener != null) typedListener.ExitDimensao(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITokenVisitor<TResult> typedVisitor = visitor as ITokenVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDimensao(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DimensaoContext dimensao() {
		DimensaoContext _localctx = new DimensaoContext(Context, State);
		EnterRule(_localctx, 12, RULE_dimensao);
		try {
			State = 122;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case OPEN_BRACKET:
				EnterOuterAlt(_localctx, 1);
				{
				State = 116;
				Match(OPEN_BRACKET);
				State = 117;
				Match(INTEGER);
				State = 118;
				Match(CLOSE_BRACKET);
				State = 119;
				dimensao();
				}
				break;
			case EPSILON:
				EnterOuterAlt(_localctx, 2);
				{
				State = 120;
				Match(EPSILON);
				}
				break;
			case Eof:
				EnterOuterAlt(_localctx, 3);
				{
				State = 121;
				Match(Eof);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParametrosContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TipoContext tipo() {
			return GetRuleContext<TipoContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(TokenParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Novo_parametroContext novo_parametro() {
			return GetRuleContext<Novo_parametroContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EPSILON() { return GetToken(TokenParser.EPSILON, 0); }
		public ParametrosContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parametros; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITokenListener typedListener = listener as ITokenListener;
			if (typedListener != null) typedListener.EnterParametros(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITokenListener typedListener = listener as ITokenListener;
			if (typedListener != null) typedListener.ExitParametros(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITokenVisitor<TResult> typedVisitor = visitor as ITokenVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParametros(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParametrosContext parametros() {
		ParametrosContext _localctx = new ParametrosContext(Context, State);
		EnterRule(_localctx, 14, RULE_parametros);
		try {
			State = 129;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case INT:
			case CHAR:
			case FLOAT:
			case BOOLEAN:
				EnterOuterAlt(_localctx, 1);
				{
				State = 124;
				tipo();
				State = 125;
				Match(ID);
				State = 126;
				novo_parametro();
				}
				break;
			case EPSILON:
				EnterOuterAlt(_localctx, 2);
				{
				State = 128;
				Match(EPSILON);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Novo_parametroContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA() { return GetToken(TokenParser.COMMA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TipoContext tipo() {
			return GetRuleContext<TipoContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(TokenParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Novo_parametroContext novo_parametro() {
			return GetRuleContext<Novo_parametroContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EPSILON() { return GetToken(TokenParser.EPSILON, 0); }
		public Novo_parametroContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_novo_parametro; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITokenListener typedListener = listener as ITokenListener;
			if (typedListener != null) typedListener.EnterNovo_parametro(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITokenListener typedListener = listener as ITokenListener;
			if (typedListener != null) typedListener.ExitNovo_parametro(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITokenVisitor<TResult> typedVisitor = visitor as ITokenVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNovo_parametro(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Novo_parametroContext novo_parametro() {
		Novo_parametroContext _localctx = new Novo_parametroContext(Context, State);
		EnterRule(_localctx, 16, RULE_novo_parametro);
		try {
			State = 137;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case COMMA:
				EnterOuterAlt(_localctx, 1);
				{
				State = 131;
				Match(COMMA);
				State = 132;
				tipo();
				State = 133;
				Match(ID);
				State = 134;
				novo_parametro();
				}
				break;
			case EPSILON:
				EnterOuterAlt(_localctx, 2);
				{
				State = 136;
				Match(EPSILON);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
